ingress/ingress-rule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mying-rule
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /app1
          pathType: Prefix
          backend:
            service:
              name: app1-svc
              port:
                number: 80
        - path: /app2
          pathType: Prefix
          backend:
            service:
              name: app2-svc
              port:
                number: 80
        - path: /app3
          pathType: Prefix
          backend:
            service:
              name: app3-svc
              port:
                number: 80
